--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,9 @@
 {
-  "extends": "next/core-web-vitals"
+  "extends": ["eslint:recommended", "next", "next/core-web-vitals", "prettier"],
+  "env": {
+    "es6": true
+  },
+  "rules": {
+    "no-console": "warn"
+  }
 }
