--- a/package.json
+++ b/package.json
@@ -10,13 +10,13 @@
   },
   "dependencies": {
     "destyle.css": "^4.0.0",
-    "next": "13.4.7",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "next": "^14.0.4",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "eslint": "^8.43.0",
-    "eslint-config-next": "^13.4.7",
+    "eslint-config-next": "^14.0.4",
     "eslint-config-prettier": "^8.8.0",
     "sass": "^1.63.6"
   }
